--- a/client/src/css/sidebar.css
+++ b/client/src/css/sidebar.css
@@ -1,7 +1,7 @@
 .nav-menu {
     background-color: #060b26;
     width: 20vw;
-    height: 100%;
+    height: vmax;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@
     align-items: center;
     padding: 8px 0px;
     list-style: none;
-    height: 60px;
+    height: 100px;
     margin-left: 25px;
   }
   
