--- a/client/src/css/sidebar.css
+++ b/client/src/css/sidebar.css
@@ -1,7 +1,7 @@
 .nav-menu {
     background-color: #060b26;
     width: 20vw;
-    height: vmax;
+    height: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
