--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,14 +1,15 @@
 .general-styling{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr;
+    grid-template: 
+    a b;
 }
 
 .sidebar-container {
-    width: 10%;
+    grid-area: a;
 }
 
 .content-container {
-    width: 90%;
+    grid-area: b;
 }
