--- a/client/src/css/sidebar.css
+++ b/client/src/css/sidebar.css
@@ -1,6 +1,7 @@
 .nav-menu {
     background-color: #060b26;
     height: 100vw;
+    width: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,19 +14,20 @@
     padding: 8px 0px;
     list-style: none;
     height: 100px;
-    margin-left: 25px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .nav-text a {
     text-decoration: none;
     color: #f5f5f5;
     font-size: 18px;
-    width: 100%;
+    width: 80%;
     height: 100%;
     display: flex;
     align-items: center;
     padding: 0 16px;
-    border-radius: 4px 0 0 4px;
+    border-radius: 4px 4px 4px 4px;
     transition: 0.2s;
   }
   
@@ -43,11 +45,13 @@
     height: 80px;
     display: flex;
     padding-left: 32px;
+    padding-right: 32px;
     align-items: center;
   }
   
   .nav-menu-item-title {
     margin-left: 8px;
+    margin-right: 8px;
   }
   
   span:hover .change-close-color {
