--- a/client/src/css/makereview.css
+++ b/client/src/css/makereview.css
@@ -1,6 +1,6 @@
 .rdiv {
     margin: auto;
-    width: 50%;
+    width: 900px;
     border: 3px solid green;
     padding: 10px;
 }
@@ -9,3 +9,47 @@
     width: 100px;
     height: 100px;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 3fr 1fr;
+    grid-template-rows: 1fr 3fr 3fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+      "a a a a"
+      "b b c c"
+      "d d d d"
+      ". . . .";
+  }
+  
+  .A { grid-area: a; }
+  
+  .B {
+    grid-area: b; 
+    display: grid;
+    grid-template-columns: 1fr 0.1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+    "score score"
+    "likeable likeable";
+}
+  .score { grid-area: score;}
+  .likeable { grid-area: likeable;}
+  
+  .C {
+    grid-area: c;
+    display: grid;
+    grid-template-columns: 1fr 0.1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+      "title title pic"
+      "author author pic"
+      "pages pages pic";
+  }
+
+  .pages { grid-area: pages; }
+  .author { grid-area: author; }
+  .pic { grid-area: Pic; }
+  
+  .D { grid-area: d; }
