--- a/client/src/css/makereview.css
+++ b/client/src/css/makereview.css
@@ -14,15 +14,20 @@
     display: grid;
     grid-template-columns: 1fr 3fr 3fr 1fr;
     grid-template-rows: 1fr 3fr 3fr 1fr;
-    gap: 0px 0px;
+    gap: 5px 20px;
+    margin-right: 100px;
     grid-template-areas:
       "a a a a"
       "b b c c"
       "d d d d"
-      ". . . .";
+      "e e e e";
   }
   
-  .A { grid-area: a; }
+  .A { 
+      grid-area: a;
+      background-color: #ECDFDF;
+      border-radius: 9px 9px 9px 9px;
+      border: solid 2px #C4C4C4; }
   
   .B {
     grid-area: b; 
@@ -32,6 +37,10 @@
     grid-template-areas:
     "score score"
     "likeable likeable";
+    background-color: #FAEBD7;
+    border-radius: 9px 9px 9px 9px;
+    border: solid 2px #C4C4C4;
+    
 }
   .score { grid-area: score;}
   .likeable { grid-area: likeable;}
@@ -39,17 +48,29 @@
   .C {
     grid-area: c;
     display: grid;
-    grid-template-columns: 1fr 0.1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-template-areas:
       "title title pic"
       "author author pic"
       "pages pages pic";
+      background-color: #FAEBD7;
+      border-radius: 9px 9px 9px 9px;
+      border: solid 2px #C4C4C4;
+      
   }
 
   .pages { grid-area: pages; }
   .author { grid-area: author; }
   .pic { grid-area: Pic; }
   
-  .D { grid-area: d; }
+  .D { 
+    grid-area: d;
+    background-color: #FAEBD7;
+    border-radius: 9px 9px 9px 9px;
+    border: solid 2px #C4C4C4; }
+
+  .E { 
+      
+    grid-area: e; }
