--- a/client/src/css/sidebar.css
+++ b/client/src/css/sidebar.css
@@ -1,6 +1,6 @@
 .nav-menu {
     background-color: #060b26;
-    height: 100vw;
+    height: 100vh;
     width: auto;
     display: flex;
     flex-direction: column;
