--- a/client/src/css/sidebar.css
+++ b/client/src/css/sidebar.css
@@ -1,5 +1,5 @@
 .nav-menu {
-    background-color: #060b26;
+    background-color: var(--navBgColor);
     height: 100vh;
     width: auto;
     display: flex;
@@ -20,7 +20,7 @@
   
   .nav-text a {
     text-decoration: none;
-    color: #f5f5f5;
+    color: var(--white);
     font-size: 18px;
     width: 80%;
     height: 100%;
