--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,15 +1,66 @@
-.general-styling{
+/* variables */
+
+:root{
+    --pageHeaderColor: #8c6ad3;
+    --pageInnerColor: #7339EE;
+    --white: white;
+    --navBgColor: #060b26;
+}
+
+/* in Laskuppen-Component */
+
+.main-general-styling{
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr;
     grid-template: 
     "a b";
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 5fr;
+    height: 100vh;
+    width: 100vw;
 }
 
-.sidebar-container {
+.main-sidebar-container {
+    grid-area: a;
+}
+
+.main-page-container {
     grid-area: b;
 }
 
-.content-container {
-    grid-area: b;
+/* in each Page-Component*/
+
+.m-page-general-styling {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-areas: 
+    "header"
+    "innerContent";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 15fr;
+    justify-items: center;  
+    background-color: RED; /* SHOULD NOT SEE RED ANYWHERE!! */
+}
+
+.m-page-header{
+    grid-area: header;
+    display: flex;
+    background-color: var(--pageHeaderColor);
+    width:100%;
+    height:100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.m-page-header h2{
+    color:var(--white);
+}
+
+.m-page-inner-container{
+    grid-area: innerContent;
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    display: grid;
+    background-color: var(--pageInnerColor); 
 }
