--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,6 +1,6 @@
 /* variables */
 
-:root{
+:root {
     --pageHeaderColor: #8c6ad3;
     --pageInnerColor: #7339EE;
     --white: white;
@@ -9,10 +9,9 @@
 
 /* in Laskuppen-Component */
 
-.main-general-styling{
+.main-general-styling {
     display: grid;
-    grid-template: 
-    "a b";
+    grid-template: "a b";
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 5fr;
     height: 100vh;
@@ -33,34 +32,33 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-areas: 
-    "header"
-    "innerContent";
+    grid-template-areas: "header" "innerContent";
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 15fr;
-    justify-items: center;  
-    background-color: RED; /* SHOULD NOT SEE RED ANYWHERE!! */
+    justify-items: center;
+    background-color: RED;
+    /* SHOULD NOT SEE RED ANYWHERE!! */
 }
 
-.m-page-header{
+.m-page-header {
     grid-area: header;
     display: flex;
     background-color: var(--pageHeaderColor);
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
-.m-page-header h2{
-    color:var(--white);
+.m-page-header h2 {
+    color: var(--white);
 }
 
-.m-page-inner-container{
+.m-page-inner-container {
     grid-area: innerContent;
     width: 100%;
     height: 100%;
     padding: 1em;
     display: grid;
-    background-color: var(--pageInnerColor); 
+    background-color: var(--pageInnerColor);
 }
