--- a/client/src/css/toplistpage.css
+++ b/client/src/css/toplistpage.css
@@ -4,7 +4,7 @@
     height: 100%;
     padding: 1em;
     display: grid;
-    grid-template-areas: "top-reader-card top-book-card my-points my-recommendation" "e e e e";
+    grid-template-areas: "top-reader-card top-book-card my-points my-recommendation" "top-lists top-lists top-lists top-lists";
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 2fr;
     gap:1em;
@@ -12,9 +12,9 @@
 }
 
 .top-reader-card, .top-book-card, .my-points, .my-recommendation {
-  background-color: #ECDFDF;
+  background-color: var(--background);
   border-radius: 9px 9px 9px 9px;
-  border: solid 2px #C4C4C4;
+  border: var(--borders);
 }
 
 .top-reader-card {
@@ -35,9 +35,35 @@
 
 .top-lists {
   grid-area: top-lists;
-  background-color: #ECDFDF;
+  background-color: var(--topListColor);
   border-radius: 9px 9px 9px 9px;
-  border: solid 2px #C4C4C4;
+  border: var(--borders);
+  grid-template-rows: 1fr 5fr;
+  grid-template-areas: "tlbp-names tlbp-classes tlbp-points tlbp-read-books"
+}
+
+.top-list-top-part {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.top-list-bottom-part {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.tlbp-names {
+    grid-area: tlbp-names;
+}
+
+.tlbp-classes {
+    grid-area: tlbp-classes;
+}
+
+.tlbp-points {
+    grid-area: tlbp-points;
+}
+
+.tlbp-read-books {
+    grid-area: tlbp-read-books;
 }
 
 hr {
