--- a/client/src/css/faqpage.css
+++ b/client/src/css/faqpage.css
@@ -1,5 +1,50 @@
 .page-content {
-    background-color: #FFFFFF;
+    background-color: var(--white);;
     width: 100%;
     height: 100%;
+    padding: 1em;
+    display: grid;
+    grid-template-areas: "question1" "question2" "question3" "question4" "question5" "question6" "question7";
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    gap:1em;
+
+}
+
+.question1, .question2, .question3, .question4, .question5, .question6, .question7 {
+  background-color: var(--background);
+  border-radius: 9px 9px 9px 9px;
+  border: var(--borders);
+}
+
+.question1 {
+    grid-template-areas: question1;
+}
+
+.question2 {
+    grid-template-areas: question2;
+}
+
+.question3 {
+    grid-template-areas: question3;
+}
+
+.question4 {
+    grid-template-areas: question4;
+}
+
+.question5 {
+    grid-template-areas: question5;
+}
+
+.question6 {
+    grid-template-areas: question6;
+}
+
+.question7 {
+    grid-template-areas: question7;
+}
+
+.answer1 {
+    grid-template-areas: answer1;
 }
