--- a/client/src/css/faqpage.css
+++ b/client/src/css/faqpage.css
@@ -1,4 +1,4 @@
-.page-content {
+.faq-page-content {
     background-color: var(--white);;
     width: 100%;
     height: 100%;
@@ -8,43 +8,42 @@
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr;
     gap:1em;
-
 }
 
-.question1, .question2, .question3, .question4, .question5, .question6, .question7 {
+.faq-question1, .faq-question2, .faq-question3, .faq-question4, .faq-question5, .faq-question6, .faq-question7 {
   background-color: var(--background);
   border-radius: 9px 9px 9px 9px;
   border: var(--borders);
 }
 
-.question1 {
+.faq-question1 {
     grid-template-areas: question1;
 }
 
-.question2 {
+.faq-question2 {
     grid-template-areas: question2;
 }
 
-.question3 {
+.faq-question3 {
     grid-template-areas: question3;
 }
 
-.question4 {
+.faq-question4 {
     grid-template-areas: question4;
 }
 
-.question5 {
+.faq-question5 {
     grid-template-areas: question5;
 }
 
-.question6 {
+.faq-question6 {
     grid-template-areas: question6;
 }
 
-.question7 {
+.faq-question7 {
     grid-template-areas: question7;
 }
 
-.answer1 {
+.faq-answer1 {
     grid-template-areas: answer1;
 }
