--- a/client/src/main.css
+++ b/client/src/main.css
@@ -61,7 +61,7 @@
 .m-page-inner-container {
     grid-area: innerContent;
     width: 100%;
-    height: 100%;
+    max-height: 93.75vh; /* 15fr/16fr */
     padding: 1em;
     display: grid;
     background-color: var(--pageInnerColor);
