--- a/client/src/pages/css/loginpage.css
+++ b/client/src/pages/css/loginpage.css
@@ -7,6 +7,10 @@ header {
 
 
 .login-page-content {
+    font-family: Helvetica;
+    background: #f78b7d15;
+    width: 100%;
+    height: 100%; 
     display: grid;
     grid-template-areas: 
     "header header"
@@ -21,14 +25,31 @@ header {
 }
 
 .login-page-form {
+    height: 70%;
+    width: 75%;
+    margin: 5%;
     grid-area: login;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.651);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 6.0px );
+    -webkit-backdrop-filter: blur( 12.0px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.pic {
+    background: rgba(0, 0,0,0);
 }
 
 .login-page-loginart {
     grid-area: loginart;
+    width: 100%;
+    aspect-ratio: 100/75;
 
 }
-
 
 .skewed-header{
     position: absolute;
@@ -57,7 +78,14 @@ header h1 {
 }
 
 .button-gradient {
-    background-image: linear-gradient(to right,#CCABD8 , #86E3CE);
-    border: solid 0px;
+    background:#CCABD8;
+    border: solid 1px;
+    margin-top: 7%;
+}
+
+.button-gradient:hover {
+    background:#86E3CE;
+    border: solid 1px;
+    
 }
 
