--- a/client/src/components/css/reviewlist.css
+++ b/client/src/components/css/reviewlist.css
@@ -27,22 +27,19 @@
     background-color: var(--background);
     border: var(--borders);
     display: grid; 
-    grid-template-columns: repeat(6, 1fr); 
-    grid-template-rows: repeat(6, 1fr); 
+    grid-template-columns: repeat(5, 1fr); 
+    grid-template-rows: repeat(5, 1fr); 
     grid-column-gap: 0px;
     grid-row-gap: 0px; 
 }
-.rlc-mul {grid-area: 1 / 1 / 1 / 1; }
-.rlc-book-title { grid-area: 1 / 1 / 2 / 2; padding-left: 5em;} 
-.rlc-book-author { grid-area: 2 / 1 / 3 / 2; padding-left: 5em;} 
-.rlc-book-pages { grid-area: 3 / 1 / 4 / 2; padding-left: 5em;} 
-.rlc-book-writtenby { grid-area: 3 / 2 / 4 / 3; } 
-.rlc-book-bookid { grid-area: 2 / 2 / 3 / 3; } 
-.rlc-book-reviewid { grid-area: 1 / 2 / 2 / 3; } 
-.rlc-book-review { grid-area: 2 / 3 / 3 / 4; } 
-.rlc-book-accepted { 
-    padding-left: 5em;
-    grid-area: 2 / 4 / 3 / 5; }
-.rlc-acc-checkbox {
-    padding-left: 1em;
-}
+
+.rlc-mul { grid-area: 1 / 1 / 4 / 2; padding-top: 2em;}
+.rlc-book-title { grid-area: 1 / 2 / 2 / 3;}
+.rlc-book-author { grid-area: 2 / 2 / 3 / 3; }
+.rlc-book-pages { grid-area: 3 / 2 / 4 / 3; }
+.rlc-book-writtenby { grid-area: 1 / 3 / 2 / 4;padding-left: 5em; }
+.rlc-book-bookid { grid-area: 2 / 3 / 3 / 4; padding-left: 5em;}
+.rlc-book-reviewid { grid-area: 3 / 3 / 4 / 4; padding-left: 5em;}
+.rlc-book-review { grid-area: 1 / 4 / 4 / 5; padding-left: 5em;}
+.rlc-book-accepted { grid-area: 1 / 5 / 2 / 6; padding-left: 5em;}
+.rlc-book-published { grid-area: 2 / 5 / 3 / 6; padding-left: 5em;}
