--- a/client/src/pages/css/loginpage.css
+++ b/client/src/pages/css/loginpage.css
@@ -16,7 +16,7 @@ header {
     "header header"
     "login loginart";
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr 4fr;
+    grid-template-rows: 1fr 4fr;
 }
 
 .login-page-header {
@@ -64,14 +64,13 @@ header {
     transform-origin: top left;
 
 }
-
 .login-page-content h1{
-    margin: 5%;
-    padding: 7%;
-    font:  40px;
+    margin-top: 1%;
+    font-size: 50px;
     text-align: center;
 
 }
+
 
 header h1 {
     position: relative;
