--- a/client/src/pages/css/loginpage.css
+++ b/client/src/pages/css/loginpage.css
@@ -25,9 +25,10 @@ header {
 }
 
 .login-page-form {
-    height: 70%;
-    width: 75%;
-    margin: 5%;
+    justify-self: center;
+    width: 60%;
+    margin-top: 12%;
+    aspect-ratio: 1/1;
     grid-area: login;
     display: flex;
     justify-content: center;
@@ -48,6 +49,7 @@ header {
     grid-area: loginart;
     width: 100%;
     aspect-ratio: 100/75;
+    margin-top: 2%;
 
 }
 
