--- a/client/src/components/css/choosebook.css
+++ b/client/src/components/css/choosebook.css
@@ -1,31 +1,48 @@
 .cbc-page-content {
-    background-color: #FFFFFF;
+    background: var(--pageInnerColor) !important;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-areas: "a a a " "b c d";
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 7fr;
-    padding: 1em;
+    grid-template-areas: "b c d";
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 1em;
 }
 
-.cbc-search-book, .cbc-search-result, .cbc-best-result, .cbc-recent-result {
-    background-color: var(--background);
-    border-radius: 9px 9px 9px 9px;
-    border: var(--borders);
+.cbc-book-results{
+    width:100%;
 }
 
 .cbc-search-result, .cbc-best-result, .cbc-recent-result {
-    height: 75vh;
-    overflow: auto;
+    background-color: var(--background);
+    border-radius: 9px 9px 9px 9px;
+    border: var(--borders);
+    overflow-y: auto;
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    display:flex;
+    flex-direction: column;
+    min-width: 200px;
+    padding-top:5px;
+    align-items: center;
 }
 
-.cbc-search-book {
-    grid-area: a;
+
+.cbc-search-bar{
+    padding:0px 1vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
+.cbc-search-bar input{
+    border-radius: 5px;
+    width: 100%;
+}
+.cbc-search-bar span{
+    min-width: 62px;
+}
 .cbc-search-result {
     grid-area: b;
 }
@@ -75,3 +92,4 @@
     width: 100%;
     height: 100%;
 }
+
