--- a/client/src/components/css/makereview.css
+++ b/client/src/components/css/makereview.css
@@ -1,19 +1,14 @@
 .mrc-page-content {
-  background-color: var(--white);
-  padding: 1em;
+  background: var(--pageInnerColor) !important;
   display: grid;
-  grid-template-areas: "a a a a" "b b c c" "d d d d" "e e e e";
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 7fr 7fr 1fr;
-  gap: 5px 20px;
+  grid-template-areas: "b b c c" "d d d d";
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 2fr 3fr;
+  gap: 1em;
+
 }
 
-.mrc-A {
-  grid-area: a;
-  background-color: var(--background);
-  border-radius: 9px 9px 9px 9px;
-  border: var(--borders);
-}
+
 
 .mrc-B {
   grid-area: b;
@@ -67,6 +62,3 @@
   border: var(--borders);
 }
 
-.mrc-E {
-  grid-area: e;
-}
