--- a/client/src/components/css/sidebar.css
+++ b/client/src/components/css/sidebar.css
@@ -3,16 +3,23 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  min-height: 430px;
+  min-height: 500px;
   background-color: var(--navBgColor);
+}
+
+.sidebar-menu hr{
+  border-color:var(--white);
+  min-width:195px;
+  width:60%;
+  margin:auto;
 }
 
 .sidebar-logo {
   display: flex;
   justify-content: center;
   width: 260px;
-  height: 70px;
-  margin: 10px 0px 0px 0px;
+  height: 50px;
+  margin: 25px 0px 0px 0px;
   font-size: 37px;
   color: var(--white);
   font-weight: bold;
@@ -20,6 +27,7 @@
 
 .sidebar-logo svg {
   margin-right: 15px;
+  height:50px;
 }
 
 .sidebar-menu-items {
@@ -31,8 +39,8 @@
 .sidebar-item {
   height: 10vh;
   width: 100%;
-  min-height: 50px;
-  max-height: 80px;
+  min-height: 53px;
+  max-height: 70px;
   margin: 0px auto;
   font-size: 20px;
   list-style: none;
