--- a/client/src/components/css/choosebook.css
+++ b/client/src/components/css/choosebook.css
@@ -23,7 +23,7 @@
     display:flex;
     flex-direction: column;
     min-width: 200px;
-    padding-top:5px;
+    padding: 5px 5px 0px 5px;
     align-items: center;
 }
 
@@ -65,10 +65,14 @@
     grid-template-areas: "a d" "b d" "c d";
     grid-template-columns: 4fr 2fr;
     grid-template-rows: 1fr 1fr 1fr;
-    padding: 1em;
+    padding: 10px;
     width: 100%;
+    height: 20vh;
+    min-height: 70px;
     background-color: var(--background);
     border: var(--borders);
+    border-radius: 10px;
+    margin: 10px 0px;
 }
 
 .cbc-book-title {
