--- a/client/src/components/css/reviewlist.css
+++ b/client/src/components/css/reviewlist.css
@@ -11,9 +11,14 @@
     background-color: var(--background);
     border-radius: 9px 9px 9px 9px;
     border: var(--borders);
-    height: 75vh;
-    overflow: auto;
+    overflow-y: scroll;
+    height: 78vh;
     overflow-x: hidden;
+    display:flex;
+    flex-direction: column;
+    min-width: 200px;
+    padding: 5px 5px 0px 5px;
+    align-items: center;
 }
 
 .rlc-book:hover {
@@ -24,27 +29,29 @@
 .rlc-book {
     padding: 1em;
     width: 100%;
+    height: 20vh;
     background-color: var(--background);
     border: var(--borders);
     display: grid; 
-    grid-template-columns: repeat(5, 1fr); 
+    grid-template-columns: 20vh 1fr 1fr 1fr 1fr; 
     grid-template-rows: repeat(5, 1fr); 
     grid-column-gap: 0px;
     grid-row-gap: 0px; 
 }
 
 .rlc-checkb {
-    width: 20px;
-    height: 20px;
+    zoom: 2;
 }
 
 .rlc-mul { grid-area: 2 / 1 / 4 / 2; justify-self: center;}
 .rlc-book-title { grid-area: 1 / 2 / 2 / 3;}
 .rlc-book-author { grid-area: 2 / 2 / 3 / 3; }
 .rlc-book-pages { grid-area: 3 / 2 / 4 / 3; }
-.rlc-book-writtenby { grid-area: 1 / 3 / 2 / 4;padding-left: 5em; }
-.rlc-book-bookid { grid-area: 2 / 3 / 3 / 4; padding-left: 5em;}
-.rlc-book-reviewid { grid-area: 3 / 3 / 4 / 4; padding-left: 5em;}
-.rlc-book-review { grid-area: 1 / 4 / 4 / 5; padding-left: 5em;}
-.rlc-book-accepted { grid-area: 1 / 5 / 2 / 6; padding-left: 5em;}
-.rlc-book-published { grid-area: 2 / 5 / 3 / 6; padding-left: 5em;}
+.rlc-book-writtenby { grid-area: 1 / 3 / 2 / 4;}
+.rlc-book-bookid { grid-area: 2 / 3 / 3 / 4;}
+.rlc-book-reviewid { grid-area: 3 / 3 / 4 / 4;}
+.rlc-book-review { grid-area: 1 / 4 / 4 / 5;}
+.rlc-book-accepted { grid-area: 1 / 5 / 2 / 6; color: green;}
+.rlc-book-notaccepted { grid-area: 1 / 5 / 2 / 6; color: red;}
+.rlc-book-published { grid-area: 2 / 5 / 3 / 6;}
+
