--- a/client/src/components/css/reviewlist.css
+++ b/client/src/components/css/reviewlist.css
@@ -53,5 +53,6 @@
 .rlc-book-review { grid-area: 1 / 4 / 4 / 5;}
 .rlc-book-accepted { grid-area: 1 / 5 / 2 / 6; color: green;}
 .rlc-book-notaccepted { grid-area: 1 / 5 / 2 / 6; color: red;}
-.rlc-book-published { grid-area: 2 / 5 / 3 / 6;}
+.rlc-book-published { grid-area: 2 / 5 / 3 / 6; color: green;}
+.rlc-book-notpublished { grid-area: 2 / 5 / 3 / 6; color: red;}
 
