--- a/client/src/pages/css/bookspage.css
+++ b/client/src/pages/css/bookspage.css
@@ -1,3 +1,21 @@
-.bp-page-content {
+.books-content-grid{
+    display: grid;
+    grid-template-areas: 
+    "searchbar filter"
+    "table table";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 4fr;
+}
 
+.searchbar{
+    grid-area: searchbar;
+}
+
+.filter{
+    grid-area: filter;
+    justify-self: end;
+}
+
+.table-container{
+    grid-area: table;
 }
