--- a/client/src/components/css/accordion.css
+++ b/client/src/components/css/accordion.css
@@ -1,19 +1,18 @@
 .accordion__section {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .accordion {
-    
   background-color: #eee;
   color: #444;
   cursor: pointer;
   padding: 18px;
   display: flex;
-  align-items: center;
   border: none;
   outline: none;
-  transition: background-color 0.6s ease;
+  transition: background-color 0.4s ease;
 }
 
 .accordion:hover,
@@ -22,29 +21,34 @@
 }
 
 .accordion__title {
-  border: solid black 2px;
+  border: solid grey 2px;
   font-weight: 600;
   font-size: 14px;
   text-align: left;
 }
 
 .accordion__icon {
-  margin-left: auto;
-  transition: transform 0.6s ease;
+  transition: transform 0.4s ease;
 }
 
 .rotate {
-  transform: rotate(90deg);
+  transform: rotate(180deg);
 }
 
-.test {
+.chevronButton {
+    zoom: 1.5;
     width: 100%;
+    border: 0px;
+}
+
+.chevronarrow {
+    float: right;
 }
 
 .accordion__content {
   background-color: white;
   overflow: auto;
-  transition: max-height 0.6s ease;
+  transition: max-height 0.4s ease;
 }
 
 .accordion__text {
