Revamped adminpage divs, made them a clickable button for accordion

--- a/client/src/components/css/accordion.css
+++ b/client/src/components/css/accordion.css
@@ -1,54 +1,48 @@
 .accordion__section {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  width: 100%;
+  position: relative;
+  margin-bottom: 30px;
 }
 
 .accordion {
-  background-color: #eee;
+  background-color: var(--background);
   color: #444;
   cursor: pointer;
-  padding: 18px;
+  padding: 5px;
   display: flex;
-  border: none;
+  align-items: center;
   outline: none;
-  transition: background-color 0.4s ease;
-}
-
-.accordion:hover,
-.active {
-  background-color: #ccc;
+  transition: background-color 0.3s ease;
+  border: 1px solid black;
 }
 
 .accordion__title {
-  border: solid grey 2px;
-  font-weight: 600;
   font-size: 14px;
   text-align: left;
+  width: 100%;
 }
 
 .accordion__icon {
-  transition: transform 0.4s ease;
+  transition: transform 0.3s ease;
+  float: left;
 }
 
 .rotate {
   transform: rotate(180deg);
 }
 
-.chevronButton {
-    zoom: 1.5;
-    width: 100%;
-    border: 0px;
-}
-
-.chevronarrow {
-    float: right;
-}
-
 .accordion__content {
   background-color: white;
   overflow: auto;
-  transition: max-height 0.4s ease;
+  transition: max-height 0.3s ease;
+}
+
+.test {
+  position: absolute;
+  margin-left: 5em;
+  margin-top: 5em;
 }
 
 .accordion__text {
