--- a/client/src/components/css/faqadmin.css
+++ b/client/src/components/css/faqadmin.css
@@ -1,34 +1,63 @@
-
 .faq-admin-FAQ {
-    background-color: var(--background);
-    border-radius: 9px 9px 9px 9px;
-    border: var(--borders);
-    margin: 1em;
-    display: flex;
-  }
-  
-  .faq-admin-FAQ:hover {
-    background-color: var(--backgroundHover);
-    cursor: pointer;
-  }
-  
-  .faq-admin-FAQ svg {
-    height: 50px !important;
-    width: 50px !important;
-    margin-left: 10px
-  }
-  
-  .faq-admin-FAQ svg:hover {
-    color: red;
-  }
-  
-  .faq-admin-FAQ-text {
-    width: 80%;
-  }
-  
-  .faq-admin-FAQ-buttons {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    width: 20%;
-  }
+  background-color: var(--background);
+  border-radius: 9px 9px 9px 9px;
+  border: var(--borders);
+  margin: 1em;
+  display: flex;
+}
+
+.faq-admin-FAQ:hover {
+  background-color: var(--backgroundHover);
+  cursor: pointer;
+}
+
+.faq-admin-FAQ svg {
+  height: 50px !important;
+  width: 50px !important;
+  margin-left: 10px
+}
+
+.faq-admin-FAQ-save:hover {
+  color: green;
+  cursor: pointer;
+}
+
+.faq-admin-FAQ-add {
+  width: 50px !important;
+  height: 50px !important;
+  align-self: flex-end;
+  margin-right: 18px
+}
+
+.faq-admin-FAQ-add:hover {
+  color: orange;
+  cursor: pointer;
+}
+
+.faq-admin-FAQ-trash:hover {
+  color: red;
+  cursor: pointer;
+}
+
+.faq-admin-FAQ-changed[type="text"] {
+  background-color: rgb(240, 159, 159);
+}
+
+.faq-admin-FAQ-saved[type="text"] {
+  background-color: rgb(159, 240, 179);
+}
+
+.faq-admin-FAQ-text {
+  width: 100%;
+}
+
+.faq-admin-FAQ-buttons {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  width: auto;
+}
+
+.faq-admin-FAQ-text input {
+  width: 100%;
+}
