--- a/client/src/pages/css/faqpage.css
+++ b/client/src/pages/css/faqpage.css
@@ -1,5 +1,6 @@
 .faq-page-content {
   padding: 1em;
+  display: flex;
   flex-direction: column;
 }
 
@@ -8,20 +9,16 @@
   border-radius: 9px 9px 9px 9px;
   border: var(--borders);
   margin: 1em;
-  
 }
 
 .tri {
   text-align: right;
   margin-right: 0.5%;
   margin-top: -2.8%;
-} 
-
-.faq-answer {
-      
-    }
-
-.expand {
-    background-color: red;
 }
 
+.faq-answer {}
+
+.expand {
+  background-color: red;
+}
