--- a/client/src/components/css/bookspagedetails.css
+++ b/client/src/components/css/bookspagedetails.css
@@ -25,6 +25,27 @@
     grid-row-gap: 0px;
 }
 
+.bpd-book:hover {
+    background-color: var(--backgroundHover);
+    cursor: pointer;
+}
+
+.bpd-book {
+    padding: 1em;
+    width: 100%;
+    height: 20vh;
+    background-color: var(--background);
+    border: var(--borders);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.div10 { grid-area: 1 / 1 / 3 / 5; }
+.div20 { grid-area: 3 / 4 / 4 / 5; }
+
 .bpd-review-result {
     background-color: var(--background);
     overflow-y: scroll;
