--- a/client/src/components/css/bookspagedetails.css
+++ b/client/src/components/css/bookspagedetails.css
@@ -1,96 +1,127 @@
-.bpd-page-content {
-    display:block;
-    background-color: #FFFFFF;
-    width: 100%;
-    height: 100%;
-    padding: 1em;
-    gap: 1em;
-    position: relative;
+
+.bpd-page-content{
+    min-height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 3fr ;
+    grid-template: 
+    "desc info"
+    "reviews reviews";
+    gap: 5%;
+
 }
 
-.bpd-img {
-    width: 100px;
-    height: 200px;
-}
+.description-holder{
+    grid-area: desc;
     
-
-.bpd-header {
-    background-color: var(--background);
-    height: 30vh;
-    margin-bottom: 25px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
 }
 
-.bpd-book:hover {
-    background-color: var(--backgroundHover);
+.description{
+    margin-left: 10%;
+    margin-top: 10%;
+}
+
+
+.information{
+    margin-left: 10%;
+    margin-top: 10%;
+    grid-area: info;
+    column-gap: 5%;
+    display: grid;
+    grid-template: 
+    "title buttonBack"
+    "author image"
+    "pages image";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows:1fr 1fr 1fr ;
+
+}
+
+.backButton{
+    grid-area: buttonBack;
+    justify-self: end;
+    align-self:top;
+    margin-right: 10%;
+    width: 30px;
+    height: 30px;
+}
+
+.backButton:hover{
     cursor: pointer;
+    color: gray;
 }
 
-.bpd-book {
-    padding: 1em;
-    width: 100%;
-    height: 20vh;
-    background-color: var(--background);
-    border: var(--borders);
+.reviews{
+    grid-area: reviews;
+}
+
+.title{
+    grid-area: title;
+}
+
+.author{
+    grid-area: author;
+}
+
+.pages{
+    grid-area: pages;
+}
+
+.image{
+    grid-area: image;
+    justify-self: center;
+    align-self: center;
+
+}
+
+.review-container{
+    margin-left: 5%;
+    margin-right: 5%;
+    border: solid;
+    border-radius: 9px 9px 9px 9px;
+    border-color: blueviolet;
+    grid-area: review;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-template:
+    "name"
+    "review";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 5fr;
 }
 
-.div10 { grid-area: 1 / 1 / 3 / 5; }
-.div20 { grid-area: 3 / 4 / 4 / 5; }
-
-.bpd-review-result {
-    background-color: var(--background);
-    overflow-y: scroll;
-    height: 62%;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    min-width: 200px;
-    padding: 5px 5px 0px 5px;
-    align-items: center;
+.name{
+    grid-area: name;
+    font-weight: bold;
+    margin-left: 1%;
+    margin-top: 1%;
 }
 
-.div1 {
-height: 100%;
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-grid-area: 1 / 1 / 2 / 2;
+.review{
+    grid-area: review;
+    margin-left: 1%;
+    margin-top: 1%;
 }
 
-.div2 {
-height: 100%;
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-grid-area: 2 / 1 / 3 / 2;
+h1{
+    margin-left: 5%;
 }
 
-.div3 {
-height: 100%;
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-grid-area: 3 / 1 / 4 / 2;
-}
 
-.div4 {
-height: 100%;
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-grid-area: 1 / 2 / 4 / 3;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
