--- a/client/src/components/css/bookspagedetails.css
+++ b/client/src/components/css/bookspagedetails.css
@@ -1,127 +1,122 @@
-
-.bpd-page-content{
-    min-height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr ;
-    grid-template: 
+.bpd-page-content {
+  min-height: 100%;
+  display: grid;
+  grid-template:
+    "buttonBack buttonBack"
     "desc info"
     "reviews reviews";
-    gap: 5%;
-
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.2fr 1fr 3fr;
 }
 
-.description-holder{
-    grid-area: desc;
-    
+.description {
+  border: solid;
+  border-radius: 9px 9px 9px 9px;
+  border-color: blueviolet;
+
+  grid-area: desc;
+  padding: 5%;
+  max-width: 80%;
+  min-width: 80%;
+  justify-self: center;
+  justify-content: center;
+  align-content: center;
 }
 
-.description{
-    margin-left: 10%;
-    margin-top: 10%;
-}
+.information {
+  border: solid;
+  border-radius: 9px 9px 9px 9px;
+  border-color: blueviolet;
 
+  padding: 5%;
+  justify-self: center;
+  justify-content: center;
+  align-content: center;
+  max-width: 80%;
+  min-width: 80%;
+  grid-area: info;
 
-.information{
-    margin-left: 10%;
-    margin-top: 10%;
-    grid-area: info;
-    column-gap: 5%;
-    display: grid;
-    grid-template: 
-    "title buttonBack"
+  row-gap: 5%;
+  display: grid;
+
+  grid-template:
+    "title image"
     "author image"
     "pages image";
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr ;
 
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.4fr 1fr 1fr;
 }
 
-.backButton{
-    grid-area: buttonBack;
-    justify-self: end;
-    align-self:top;
-    margin-right: 10%;
-    width: 30px;
-    height: 30px;
+.backButton {
+  grid-area: buttonBack;
+  justify-self: end;
+  align-self: center;
+  margin-right: 2%;
+  min-width: 30px;
+  min-height: 30px;
 }
 
-.backButton:hover{
-    cursor: pointer;
-    color: gray;
+.backButton:hover {
+  cursor: pointer;
+  color: gray;
 }
 
-.reviews{
-    grid-area: reviews;
+.reviews {
+  grid-area: reviews;
 }
 
-.title{
-    grid-area: title;
+.title {
+  grid-area: title;
 }
 
-.author{
-    grid-area: author;
+.author {
+  grid-area: author;
 }
 
-.pages{
-    grid-area: pages;
+.pages {
+  grid-area: pages;
 }
 
-.image{
-    grid-area: image;
-    justify-self: center;
-    align-self: center;
-
+.image {
+  grid-area: image;
+  justify-self: center;
+  align-self: center;
 }
 
-.review-container{
-    margin-left: 5%;
-    margin-right: 5%;
-    border: solid;
-    border-radius: 9px 9px 9px 9px;
-    border-color: blueviolet;
-    grid-area: review;
-    display: grid;
-    grid-template:
+.review-container {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  border: solid;
+  border-radius: 9px 9px 9px 9px;
+  border-color: blueviolet;
+  grid-area: review;
+  display: grid;
+  grid-template:
     "name"
     "review";
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 5fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 5fr;
 }
 
-.name{
-    grid-area: name;
-    font-weight: bold;
-    margin-left: 1%;
-    margin-top: 1%;
+.name {
+  grid-area: name;
+  font-weight: bold;
+  margin-left: 1%;
+  margin-top: 1%;
 }
 
-.review{
-    grid-area: review;
-    margin-left: 1%;
-    margin-top: 1%;
+.review {
+  grid-area: review;
+  margin-left: 1%;
+  margin-top: 1%;
+  max-width: 70%;
+  word-wrap: break-word;
 }
 
-h1{
-    margin-left: 5%;
+h1 {
+  margin-top: 5%;
+  margin-left: 5%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
