--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,87 +1,106 @@
 /* variables */
 
 :root {
-    --pageHeaderColor: #8c6ad3;
-    --pageInnerColor: #7339EE;
-    --white: white;
-    --navBgColor: hsl(231, 73%, 9%);
-    --background: #FAEBD7;
-    --borders: solid 2px #C4C4C4;
-    --topListColor: #d69467;
-    --barcolor: #ECDFDF;
-    --backgroundHover: #faddb7;
+  --pageHeaderColor: #8c6ad3;
+  --pageInnerColor: #7339ee;
+  --white: white;
+  --navBgColor: hsl(231, 73%, 9%);
+  --background: #faebd7;
+  --borders: solid 2px #c4c4c4;
+  --topListColor: #d69467;
+  --barcolor: #ecdfdf;
+  --backgroundHover: #faddb7;
+
+  /*Here begins big brain gradient and glass idea*/
+  --backgroundGradient: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
+}
+
+.glassMorphism {
+    background: rgba( 230, 230, 230, 0.4 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 5.0px );
+    -webkit-backdrop-filter: blur( 5.0px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 /* in Laskuppen-Component */
-body{    
-    overflow-x: hidden;
+body {
+  overflow-x: hidden;
+  background-image: var(--backgroundGradient);
 }
 .main-general-styling {
-    display: grid;
-    grid-template: "a b";
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 5fr;
-    height: 100vh;
-    width: 100vw;
+  background: rgba(0, 0, 0, 0);
+  display: grid;
+  grid-template: "a b";
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 5fr;
+  height: 100vh;
+  width: 100vw;
 }
 
 .main-sidebar-container {
-    grid-area: a;
+  grid-area: a;
 }
 
 .main-page-container {
-    grid-area: b;
+  grid-area: b;
 }
 
 /* in each Page-Component*/
 
 .main-page-general-styling {
-    height: 100vh;
-    width: 100%;
-    display: grid;
-    grid-template-areas: "header" "innerContent";
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 15fr;
-    justify-items: center;
-    background-color: var(--pageHeaderColor);
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-areas: "header" "innerContent";
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 15fr;
+  justify-items: center;
+  background-color: var(--pageHeaderColor);
+  background: rgba(0, 0, 0, 0);
 
-    /* SHOULD NOT SEE RED ANYWHERE!! */
+  /* SHOULD NOT SEE RED ANYWHERE!! */
 }
 
 .main-page-header {
-    grid-area: header;
-    display: flex;
-    background-color: var(--pageHeaderColor);
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+  grid-area: header;
+  display: flex;
+  background-color: var(--pageHeaderColor);
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0);
 }
 
 .main-page-header h2 {
-    font-size: 30px;
-    min-height: 40px;
-    margin: 0px;
-    color: var(--white);
+  font-size: 30px;
+  min-height: 40px;
+  margin: 0px;
+  color: var(--white);
+  background: rgba(0, 0, 0, 0);
 }
 
 .main-page-inner-container {
-    border-radius: 10px 10px 0px 0px;
-    grid-area: innerContent;
-    width: 100%;
-    height: 100%;
-    min-height: 460px;
-    max-height: 93.75vh;
-    /* 15fr/16fr = 93.75 */
-    padding: 1em;
-    display: grid;
-    background-color: var(--pageInnerColor);
+  border-radius: 10px 10px 0px 0px;
+  grid-area: innerContent;
+  width: 100%;
+  height: 100%;
+  min-height: 460px;
+  max-height: 93.75vh;
+  /* 15fr/16fr = 93.75 */
+  padding: 1em;
+  display: grid;
+  background-color: var(--pageInnerColor);
+  background: rgba(0, 0, 0, 0);
 }
 
-.main-page-content{
-    background-color: var(--white);
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
+.main-page-content {
+  background-color: var(--white);
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  background: rgba(0, 0, 0, 0);
 }
