--- a/client/src/pages/css/toplistpage.css
+++ b/client/src/pages/css/toplistpage.css
@@ -5,12 +5,14 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 3fr;
   gap: 1em;
+  background:rgba(255, 255,255, 0.5) !important;
 }
 
 .top-top-reader-card, .top-top-book-card, .top-my-points, .top-my-recommendation {
   background: var(--white);
   border-radius: 9px 9px 9px 9px;
   border: var(--borders);
+  background:rgba(0, 0,0, 0);
 }
 
 .top-top-reader-card {
@@ -47,6 +49,7 @@
   grid-template-areas: "header" "table";
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 6fr;
+  background:rgba(0, 0,0, 0);
 }
 
 .top-top-list-header {
@@ -57,6 +60,7 @@
   gap: 1%;
   grid-template-areas: "filter student class points readbooks";
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  background:rgba(0, 0,0, 0);
 }
 
 .top-tableDiv {
@@ -64,6 +68,7 @@
   padding: 3%;
   grid-area: table;
   background: var(--white);
+  background:rgba(0, 0,0, 0);
 }
 
 .top-filter-label {
@@ -79,6 +84,7 @@
   grid-area: student;
   border-radius: 9px 9px 0px 0px !important;
   border-style: solid solid hidden solid;
+  background:rgba(0, 0,0, 0);
 }
 
 .top-classButton {
@@ -87,6 +93,7 @@
   grid-area: class;
   border-radius: 9px 9px 0px 0px !important;
   border-style: solid solid hidden solid;
+  background:rgba(0, 0,0, 0);
 }
 
 .top-pointsButton {
@@ -95,6 +102,7 @@
   grid-area: points;
   border-radius: 9px 9px 0px 0px !important;
   border-style: solid solid hidden solid;
+  background:rgba(0, 0,0, 0);
 }
 
 .top-readBooksButton {
@@ -103,11 +111,13 @@
   grid-area: readbooks;
   border-radius: 9px 9px 0px 0px !important;
   border-style: solid solid hidden solid;
+  background:rgba(0, 0,0, 0);
 }
 
 .top-table-holder {
   border: var(--borders);
   background: var(--background);
+  background:rgba(0, 0,0, 0);
 }
 
 hr {
