--- a/client/src/components/css/makereview.css
+++ b/client/src/components/css/makereview.css
@@ -1,16 +1,36 @@
 .mrc-page-content {
-  background: var(--pageInnerColor) !important;
   display: grid;
   grid-template-areas: "b b c c" "d d d d";
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 2fr 3fr;
   gap: 1em;
+  height: 100%;
+  min-height: 100%;
 
+}
+
+.mrc-page-content input{
+  background-color:rgba(255, 255, 255, 0.719);
+  border-radius: 9px 9px 9px 9px;
+  outline: none;
+  border-style: none;
+  color: rgb(88, 86, 86);
+}
+
+.mrc-page-content textarea{
+  background-color:rgba(255, 255, 255, 0.65);
+  border-radius: 9px 9px 9px 9px;
+  outline: none;
+  border-style: none;
+  width: 100%;
+  height: 80%;
+  max-height: 100%;
 }
 
 
 
 .mrc-B {
+  padding: 1em;
   grid-area: b;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -30,6 +50,7 @@
 }
 
 .mrc-C {
+  padding: 1em;
   grid-area: c;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -56,6 +77,7 @@
 }
 
 .mrc-D {
+  padding: 1em;
   grid-area: d;
   background-color: var(--background);
   border-radius: 9px 9px 9px 9px;
