--- a/client/src/components/css/archive.css
+++ b/client/src/components/css/archive.css
@@ -18,35 +18,44 @@
 }
 
 .published{
-    background-color: rgb(65, 238, 108);
+    color: rgb(24, 64, 138);
 }
 
 .accepted{
-    background-color: rgb(159, 240, 179);
+    color: rgb(29, 122, 53);
 }
 
 .not-accepted{
-    background-color: rgb(240, 159, 159);
+    color: rgb(128, 27, 27);
 }
 
 
 .arc-review-img{
     grid-area: img;
     height:20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: start;
+    align-self: center;
 }
 
 .arc-review-img img{
-    height: 20vh;
-    width: 15vh;
-    min-width: 75px;
-    min-height: 100%;
+    height: 90%;
+    max-height: 90%;
+    max-width: 50%;
+    width: 50%;
+    min-width: 50%; 
 }
 .arc-review-info{
     grid-area: info;
+    align-self: center;
 }
 .arc-review-text{
     grid-area: text;
+    margin-top: 2em;
 }
 .arc-review-info2{
     grid-area: info2;
+    align-self: center;
 }
