--- a/client/src/pages/css/toplistpage.css
+++ b/client/src/pages/css/toplistpage.css
@@ -40,6 +40,7 @@
   grid-template-areas: "a d" "b d" "c d";
   grid-template-columns: 4fr 2fr;
   grid-template-rows: 1fr 1fr 1fr;
+  padding: 1em;
   width: 100%;
 }
 
@@ -136,6 +137,7 @@ hr {
 
 .top-card-text{
   margin: 0px;
+  margin-top: 1em;
   margin-left: 1em;
 }
 
